--- a/Ejercicio 1/index.html
+++ b/Ejercicio 1/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <button class="showme">Pillame!</button>
-		<h1 id="pillado">Aqui estoy 8)</h1>
+		<h1 id="pillado">Aqui estoy</h1>
 		<p>Soy el power ranger Amarillo</p>
     <p>Soy el power ranger Rojo</p>
     <p>Soy el power ranger Azul</p>
